--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyAvw8tcWpbtJdD_WQHJZcbWaYCUM2gPrYM</string>
+	<string></string>
 	<key>GCM_SENDER_ID</key>
 	<string>594252193689</string>
 	<key>PLIST_VERSION</key>
